added dependency 'bevy'

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "bevy_playground"
-version = "0.1.0"
 authors = ["Shynd <shynd@protonmail.com>"]
 edition = "2018"
+name = "bevy_playground"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bevy = "0.1.3"
